--- a/assets/sass/global/global.scss
+++ b/assets/sass/global/global.scss
@@ -5,6 +5,7 @@
 @import "navbar";
 @import "input-groups";
 @import	"typography"; 
+@import "buttons";
 @import "icons-custom";
 @import "panel";
 @import "header";
