--- a/assets/sass/modules/_blog.scss
+++ b/assets/sass/modules/_blog.scss
@@ -142,7 +142,7 @@
 			a {
 				@extend %btn;
 				font-size: rem(12px);
-				border: 2px solid $gray-lighter;
+				border: 2px solid $gray;
 				color: $gray;
 				padding: rem(5px) rem(15px);
 				margin: 0;
